@@ -650,7 +650,7 @@ int loadChameleonConfig(config_file_t *config)
 		"bt(0,0)/Extra/org.chameleon.Boot.plist",
 		
 		"rd(0,0)/Extra/com.apple.Boot.plist",   /* DEPRECIATED */
-		"/Extra/com.apple.Boot.plist"           /* DEPRECIATED */
+		"/Extra/com.apple.Boot.plist",           /* DEPRECIATED */
 		"bt(0,0)/Extra/com.apple.Boot.plist",   /* DEPRECIATED */
 	};
 
