@@ -17,6 +17,7 @@
 
 #define kUseAtiROM				"UseAtiROM"
 #define kAtiConfig				"AtiConfig"
+#define kAtiPorts				"AtiPorts"
 #define kATYbinimage			"ATYbinimage"
 
 #define Reg32(reg)				(*(volatile uint32_t *)(card->mmio + reg))
@@ -46,7 +47,7 @@ typedef enum {
 	CHIP_FAMILY_RS880,
 	/* R700 */
 	CHIP_FAMILY_RV770,
-	CHIP_FAMILY_RV730, // review - see read_disabled_vbios
+	CHIP_FAMILY_RV730,
 	CHIP_FAMILY_RV710,
 	CHIP_FAMILY_RV740,
 	/* Evergreen */
@@ -55,15 +56,11 @@ typedef enum {
 	CHIP_FAMILY_JUNIPER,
 	CHIP_FAMILY_CYPRESS,
 	CHIP_FAMILY_HEMLOCK,
-//	CHIP_FAMILY_GRANVILLE, //Azi: review
 	/* Northern Islands */
 	CHIP_FAMILY_BARTS,
 	CHIP_FAMILY_CAICOS,
 	CHIP_FAMILY_CAYMAN,
-	CHIP_FAMILY_TURKS, // review - just 6758 & 6759 dev ids
-	// mobility
-//	CHIP_FAMILY_M96, // RV730
-	//---
+	CHIP_FAMILY_TURKS,
 	CHIP_FAMILY_LAST
 } chip_family_t;
 
@@ -92,15 +89,11 @@ static const char *chip_family_name[] = {
 	"Juniper",	// RV840
 	"Cypress",	// RV870
 	"Hemlock",
-//	"Granville"	//Azi:---
 	/* Northern Islands */
 	"Barts",
 	"Caicos",
 	"Cayman",
 	"Turks",
-	// mobility
-//	"M96",
-	//---
 	""
 };
 
@@ -217,26 +210,6 @@ typedef struct {
 } radeon_card_info_t;
 
 static radeon_card_info_t radeon_cards[] = {
-	//Azi: added devices
-// temporary placement
-	// FredWst
-	{ 0x954F,	0xE990174B,	CHIP_FAMILY_RV710,		"Sapphire Radeon HD4350",			kNull		}, // review model
-	// dickhouse 
-	{ 0x6760,	0x1CB21043,	CHIP_FAMILY_RV730,		"AMD Radeon HD 6470M",				kNull		},
-	// Akbar
-	{ 0x9480,	0x3628103C,	CHIP_FAMILY_RV730,/*M96*/"ATI Radeon HD 4650M",				kShrike		}, // hp OK
-	// issue #88
-	{ 0x6741,	0x1646103C,	CHIP_FAMILY_TURKS,		"AMD Radeon HD 6750M",				kNull		}, // - review turks
-	// issue #121
-	{ 0x6741,	0x050E1025,	CHIP_FAMILY_TURKS,		"AMD Radeon HD 6650M",				kNull		}, // acer - review turks
-	// issue #89
-	{ 0x68A8,	0x050E1025,	CHIP_FAMILY_CYPRESS,	"AMD Radeon HD 6850M",				kUakari		}, //Azi: CHIP_FAMILY_GRANVILLE ?? review
-	// issue #90
-	{ 0x68E4,	0x1c921043,	CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470M",				kEulemur	}, // asus - confirm model, chipset
-	// issue #91
-	{ 0x68C0,	0x1594103C,	CHIP_FAMILY_REDWOOD,	"AMD Radeon HD 6570M",				kNull		}, // confirm model, chipset
-	
-	//==================================//================================//============================//
 	
 	/* Earlier cards are not supported */
 	{ 0x9400,	0x30001002, CHIP_FAMILY_R600,		"ATI Radeon HD 2900 PRO",			kNull		},
@@ -272,6 +245,10 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x944E,	0x30101787, CHIP_FAMILY_RV770,		"ATI Radeon HD 4810 Series",		kMotmot		},
 	{ 0x944E,	0x31001787, CHIP_FAMILY_RV770,		"ATI Radeon HD 4820",				kMotmot		},
 	
+	{ 0x9480,	0x3628103C,	CHIP_FAMILY_RV730,		"ATI Radeon HD 4650M",				kGliff		},
+	{ 0x9480,	0x9035104D,	CHIP_FAMILY_RV730,		"ATI Radeon HD 4650M",				kGliff		},
+	
+	{ 0x9490,	0x20031787, CHIP_FAMILY_RV730,		"ATI Radeon HD 4670",				kFlicker	},
 	{ 0x9490,	0x30501787, CHIP_FAMILY_RV730,		"ATI Radeon HD 4710",				kNull		},
 	{ 0x9490,	0x4710174B, CHIP_FAMILY_RV730,		"ATI Radeon HD 4710",				kNull		},
 	{ 0x9490,	0x300017AF, CHIP_FAMILY_RV730,		"ATI Radeon HD 4710",				kNull		},
@@ -354,18 +331,21 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x954F,	0x29201682, CHIP_FAMILY_RV710,		"ATI Radeon HD 4550",				kNull		},
 	{ 0x954F,	0x29211682, CHIP_FAMILY_RV710,		"ATI Radeon HD 4550",				kNull		},
 	{ 0x954F,	0x30901682, CHIP_FAMILY_RV710,		"XFX Radeon HD 4570",				kNull		},
-	{ 0x954F,	0x4450174B, CHIP_FAMILY_RV710,		"ATI Radeon HD 4450",				kNull		},
-	{ 0x954F,	0x3000174B, CHIP_FAMILY_RV710,		"ATI Radeon HD 4520",				kNull		},
 	{ 0x954F,	0x30501787, CHIP_FAMILY_RV710,		"ATI Radeon HD 4450",				kNull		},
 	{ 0x954F,	0x31001787, CHIP_FAMILY_RV710,		"ATI Radeon HD 4520",				kNull		},
-	{ 0x954F,	0x4570174B, CHIP_FAMILY_RV710,		"Sapphire Radeon HD4570",			kNull		},
 	{ 0x954F,	0x301017AF, CHIP_FAMILY_RV710,		"ATI Radeon HD 4450",				kNull		},
+	{ 0x954F,	0x4450174B, CHIP_FAMILY_RV710,		"ATI Radeon HD 4450",				kNull		},
+	{ 0x954F,	0x3000174B, CHIP_FAMILY_RV710,		"ATI Radeon HD 4520",				kNull		},
+	{ 0x954F,	0x4570174B, CHIP_FAMILY_RV710,		"Sapphire Radeon HD 4570",			kNull		},
+	{ 0x954F,	0xE990174B,	CHIP_FAMILY_RV710,		"Sapphire Radeon HD 4350",			kNull		},
 	
 	{ 0x9552,	0x3000148C, CHIP_FAMILY_RV710,		"ATI Radeon HD 4300/4500 Series",	kNull		},
 	{ 0x9552,	0x3000174B, CHIP_FAMILY_RV710,		"ATI Radeon HD 4300/4500 Series",	kNull		},
 	{ 0x9552,	0x30001787, CHIP_FAMILY_RV710,		"ATI Radeon HD 4300/4500 Series",	kNull		},
 	{ 0x9552,	0x300017AF, CHIP_FAMILY_RV710,		"ATI Radeon HD 4300/4500 Series",	kNull		},
 	{ 0x9552,	0x04341028, CHIP_FAMILY_RV710,		"ATI Mobility Radeon 4330",			kShrike		},
+	
+	{ 0x9553,	0x1B321043, CHIP_FAMILY_RV710,		"ATI Mobility Radeon HD 4570",		kShrike/*??*/},
 	
 	{ 0x9581,	0x95811002, CHIP_FAMILY_RV630,		"ATI Radeon HD 3600 Series",		kNull		},
 	{ 0x9581,	0x3000148C, CHIP_FAMILY_RV630,		"ATI Radeon HD 3600 Series",		kNull		},
@@ -435,6 +415,8 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x689C,	0x039E1043, CHIP_FAMILY_HEMLOCK,	"ASUS EAH5870 Series",				kUakari		},
 	{ 0x689C,	0x30201682, CHIP_FAMILY_HEMLOCK,	"ATI Radeon HD 5970",				kUakari		},
 	
+	{ 0x68A8,	0x050E1025,	CHIP_FAMILY_CYPRESS,	"AMD Radeon HD 6850M",				kUakari		}, // issue #89
+	
 	{ 0x68B8,	0xE147174B, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5770",				kVervet		},
 	{ 0x68B8,	0x21D71458, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5770",				kVervet		},
 	{ 0x68B8,	0x1482174B, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5770",				kVervet		},
@@ -443,6 +425,12 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x68B8,	0x200B1787, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5770",				kVervet		},
 	{ 0x68B8,	0x22881787, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5770",				kVervet		},
 	{ 0x68B8,	0x00CF106B, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5770",				kHoolock	},
+	
+	{ 0x68C0,	0x1594103C,	CHIP_FAMILY_REDWOOD,	"AMD Radeon HD 6570M",				kNull		}, // issue #91
+	//Azi: from Slice { 0x100268C0,  "ATI Radeon 5670 Series", "Galago"}
+	// http://www.insanelymac.com/forum/index.php?s=&showtopic=255866&view=findpost&p=1695482
+	
+	{ 0x68C1,	0x033E1025,	CHIP_FAMILY_REDWOOD,	"ATI Mobility Radeon HD 5650",		kNull		},
 	
 	{ 0x68D8,	0x301117AF, CHIP_FAMILY_REDWOOD,	"ATI Radeon HD 5690",				kNull		},
 	{ 0x68D8,	0x301017AF, CHIP_FAMILY_REDWOOD,	"ATI Radeon HD 5730",				kNull		},
@@ -457,19 +445,20 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x68DA,	0x30001787, CHIP_FAMILY_REDWOOD,	"ATI Radeon HD 5630",				kNull		},
 	{ 0x68DA,	0x5630174B, CHIP_FAMILY_REDWOOD,	"ATI Radeon HD 5630",				kNull		},
 	
-	{ 0x68E0,	0x04561028, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470M",				kEulemur	},
 	{ 0x68E1,	0x1426103C, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5430M",				kEulemur	},
+	{ 0x68E0,	0x1433103C, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470M",				kEulemur	},
+	{ 0x68E0,	0x04561028, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470M",				kEulemur	},
+    { 0x68F9,   0x20091787, CHIP_FAMILY_CEDAR,      "ATI Radeon HD 5450",               kEulemur    },
+    { 0x68F9,   0x22911787, CHIP_FAMILY_CEDAR,      "ATI Radeon HD 5450",               kEulemur    },
 	{ 0x68F9,	0x301317AF, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470",				kNull		},
 	{ 0x68F9,	0x301117AF, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470",				kNull		},
-	{ 0x68F9,	0x301217AF, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5490",				kNull		},
 	{ 0x68F9,	0x30001787, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470",				kNull		},
-	{ 0x68F9,	0x30021787, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5490",				kNull		},
-	{ 0x68F9,	0x30011787, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5530",				kNull		},
 	{ 0x68F9,	0x5470174B, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5470",				kNull		},
+	{ 0x68F9,	0x301217AF, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5490",				kNull		},
+	{ 0x68F9,	0x30021787, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5490",				kNull		},
 	{ 0x68F9,	0x5490174B, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5490",				kNull		},
 	{ 0x68F9,	0x5530174B, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5530",				kNull		},
-	{ 0x68F9,   0x20091787, CHIP_FAMILY_CEDAR,      "ATI Radeon HD 5450",               kEulemur    }, // issue 119
-	{ 0x68F9,   0x22911787, CHIP_FAMILY_CEDAR,      "ATI Radeon HD 5450",               kEulemur    }, // HIS
+	{ 0x68F9,	0x30011787, CHIP_FAMILY_CEDAR,		"ATI Radeon HD 5530",				kNull		},
 	
 	/* Northen Islands */
 	{ 0x6718,	0x0B001002,	CHIP_FAMILY_CAYMAN,		"AMD Radeon HD 6970",				kNull		},
@@ -480,7 +469,12 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x6739,	0x67391002,	CHIP_FAMILY_BARTS,		"AMD Radeon HD 6850",				kDuckweed	},
 	{ 0x6739,	0x21F81458,	CHIP_FAMILY_BARTS,		"AMD Radeon HD 6850",				kDuckweed	},
 	
+	{ 0x6741,	0x050E1025,	CHIP_FAMILY_TURKS,		"AMD Radeon HD 6650M",				kNull		}, // issue 121
+	{ 0x6741,	0x1646103C,	CHIP_FAMILY_TURKS,		"AMD Radeon HD 6750M",				kNull		}, // issue 88
+	
 	{ 0x6759,	0xE193174B,	CHIP_FAMILY_TURKS,		"AMD Radeon HD 6570",				kNull		},
+	
+	{ 0x6760,	0x1CB21043,	CHIP_FAMILY_RV730,		"AMD Radeon HD 6470M",				kNull		},
 	
 	/* standard/default models */
 	{ 0x9400,	0x00000000, CHIP_FAMILY_R600,		"ATI Radeon HD 2900 XT",			kNull		},
@@ -540,8 +534,6 @@ static radeon_card_info_t radeon_cards[] = {
 	{ 0x68B9,	0x00000000, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5600 Series",		kVervet		},
 	{ 0x68B8,	0x00000000, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5700 Series",		kVervet		},
 	{ 0x68BE,	0x00000000, CHIP_FAMILY_JUNIPER,	"ATI Radeon HD 5700 Series",		kVervet		},
-	//Azi: from Slice { 0x100268C0,  "ATI Radeon 5670 Series", "Galago"}
-	// http://www.insanelymac.com/forum/index.php?s=&showtopic=255866&view=findpost&p=1695482
 	
 	{ 0x68D8,	0x00000000, CHIP_FAMILY_REDWOOD,	"ATI Radeon HD 5600 Series",		kBaboon		},
 	{ 0x68D9,	0x00000000, CHIP_FAMILY_REDWOOD,	"ATI Radeon HD 5500 Series",		kBaboon		},
@@ -587,7 +579,7 @@ card_t *card;
 #define FLAGTRUE			MKFLAG(0)
 #define EVERGREEN			MKFLAG(1)
 
-static uint8_t atN = 0;
+//static uint8_t atN = 0;
 
 typedef struct {
 	type_t					type;
@@ -1145,10 +1137,11 @@ bool devprop_add_pci_config_space(void)
 
 static bool init_card(pci_dt_t *pci_dev)
 {
-	char name[24];
-	char name_parent[24];
-	int i;
-	bool add_vbios = true;
+	bool	add_vbios = true;
+	char	name[24];
+	char	name_parent[24];
+	int		i;
+	int		n_ports = 0;
 	
 	card = malloc(sizeof(card_t));
 	if (!card)
@@ -1201,15 +1194,7 @@ static bool init_card(pci_dt_t *pci_dev)
 		}
 	}
 	
-	card->ports = 2; // default
-	
-	if (card->info->chip_family >= CHIP_FAMILY_CEDAR)
-	{
-		card->flags |= EVERGREEN;
-		card->ports = 3;
-	}
-	
-	atN = 0;
+//	atN = 0;
 	
 	card->cfg_name = getStringForKey(kAtiConfig, &bootInfo->chameleonConfig);
 	if (!card->cfg_name)
@@ -1224,10 +1209,15 @@ static bool init_card(pci_dt_t *pci_dev)
 				card->ports = card_configs[i].ports;
 	}
 	
-	//Azi: http://forum.voodooprojects.org/index.php/topic,1959.msg10402.html#msg10402
-	// get around this...
-	if (pci_dev->device_id == 0x9552 && pci_dev->subsys_id.subsys_id == 0x04341028 )
-		card->ports = 2;
+	if (card->info->chip_family >= CHIP_FAMILY_CEDAR)
+	{
+		card->flags |= EVERGREEN;
+		card->ports = 3; //Azi: not sure of the usefulness ??
+	}
+	
+	getIntForKey(kAtiPorts, &n_ports, &bootInfo->bootConfig);
+	if (n_ports > 0)
+		card->ports = n_ports;
 	
 	sprintf(name, "ATY,%s", card->cfg_name);
 	aty_name.type = kStr;
